# TODO: Make this "publishable"
[package]
name = "shebling-ast"
version = "0.0.0"
authors = ["Maria José Solano <majosolano99@gmail.com>"]
edition = "2021"
description = "Placeholder for a shebling crate"
readme = "README.md"
repository = "https://github.com/MariaSolOs/shebling"
license = "Apache-2.0"

[dependencies]
miette = { workspace = true }
