[package]
name = "shebling-lexer"
version = "0.0.0"
edition = "2021"
description = "Placeholder for a shebling crate"
readme = "README.md"
repository = "https://github.com/MariaSolOs/shebling"
license = "Apache-2.0"

[dependencies]
miette = { workspace = true }
shebling-ast = { version = "0.0.0", path = "../shebling-ast" }
thiserror = { workspace = true }

[dev-dependencies]
insta = "1.29.0"

# Testing optimizations
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3
