[package]
# TODO: Make these "publishable"
name = "shebling-parser-old"
version = "0.0.0"
edition = "2021"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
miette = { workspace = true }
nom = "7.1.3"
nom_locate = "4.1.0"
once_cell = "1.17.1"
shebling-ast = { version = "0.0.0", path = "../shebling-ast" }
thiserror = "1.0.40"
wec = "1.0.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
