[package]
# TODO: Make these "publishable"
name = "shebling-parser"
version = "0.0.0"
edition = "2021"

[dependencies]
miette = { version = "5.8.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.1.0"
shebling-codegen = { version = "=0.1.0", path = "../shebling-codegen" }
thiserror = "1.0.40"
