[package]
# TODO: Make these "publishable"
name = "shebling-parser"
version = "0.0.0"
edition = "2021"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
miette = { version = "5.8.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.1.0"
once_cell = "1.17.1"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
