[package]
# TODO: Make these "publishable"
name = "shebling"
version = "0.0.0"
authors = ["Maria José Solano <majosolano99@gmail.com>"]
edition = "2021"
description = "A shiny Bash linter."
readme = "README.md"
repository = "https://github.com/MariaSolOs/shebling"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
nom = "7.1.3"
nom_locate = "4.1.0"
once_cell = "1.17.1"
paste = "1.0.12"
shebling-codegen = { version = "=0.1.0", path = "../shebling-codegen" }

[dev-dependencies]
pretty_assertions = "1.3.0"
