[package]
# TODO: Make these "publishable"
name = "shebling"
version = "0.0.0"
authors = ["Maria José Solano <majosolano99@gmail.com>"]
edition = "2021"
description = "A shiny Bash linter."
readme = "README.md"
repository = "https://github.com/MariaSolOs/shebling"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
shebling-parser = { version = "=0.0.0", path = "../shebling-parser" }
